base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinic-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: / # On fait référence au contexte de l'application
        backend:
          service:
            name: clinic-service
            port:
              number: 8080
